# energy_use

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: Energy_notebook.ipynb
