[tool.poetry]
name = "energy-use"
version = "0.1.0"
description = "Toy example for using python to review energy consumption"
authors = ["Kerry Cella <Kerry.Cella@ukhsa.gov.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.3"
datetime = "^5.5"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
